Adapt email list checkboxes to handle images

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <div class="card">
           <div class="email__actions">
             <input
-            id="email-1"
-            type="checkbox"
-            class="email__checkbox"
-            checked
+              id="email-1"
+              type="checkbox"
+              class="email__checkbox"
+              checked
             />
             <span class="checkmark"></span>
             <label for="email-1">JJ</label>
@@ -62,7 +62,13 @@
           <div class="email__actions">
             <input id="email-3" type="checkbox" class="email__checkbox" />
             <span class="checkmark"></span>
-            <label for="email-3">JD</label>
+            <label for="email-3">
+              <img
+                width="28"
+                alt="Github Invertocat Logo"
+                src="https://upload.wikimedia.org/wikipedia/commons/c/c2/GitHub_Invertocat_Logo.svg"
+              />
+            </label>
           </div>
           <a href="#" class="email__details">
             <h3>{ email.author }</h3>
