Put contact initials inside span

--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
       <li class="email">
         <div class="card email__unread">
           <div class="email__actions">
-            <input
-              id="email-1"
-              type="checkbox"
-              class="email__checkbox"
-              checked
-            />
+            <input id="email-1" type="checkbox" class="email__checkbox" />
             <span class="checkmark"></span>
             <label for="email-1">JJ</label>
           </div>
@@ -25,10 +20,10 @@
             <p>{ email.msg }</p>
           </a>
           <div class="email__priority">
-            <div>
-              <img src="/assets/svg/star-outline.svg" class="star-icon"/>
-              <img src="pin-illustrative.svg" class="pinned-icon visible"/>
-            </div>
+            <img
+              src="/assets/svg/pin-illustrative.svg"
+              class="pinned-icon visible"
+            />
             <div>
               <span class="email__datetime">6:00PM</span>
             </div>
@@ -40,13 +35,11 @@
       <li class="email">
         <div class="card email__unread">
           <div class="email__actions">
-            <input
-              id="email-2"
-              type="checkbox"
-              class="email__checkbox"
-            />
+            <input id="email-2" type="checkbox" class="email__checkbox" />
             <span class="checkmark"></span>
-            <label for="email-2">JJ</label>
+            <label for="email-2">
+              <span> JJ </span>
+            </label>
           </div>
           <a href="#" class="email__details">
             <h3>{ email.author }</h3>
@@ -54,15 +47,9 @@
           </a>
           <div class="email__priority">
             <div class="email__star">
-              <input
-                id="star-2"
-                type="checkbox"
-                class="star__checkbox"
-              />
+              <input id="star-2" type="checkbox" class="star__checkbox" />
               <span class="star"></span>
-              <label for="star-2">
-                Star
-              </label>
+              <label for="star-2"> Star </label>
             </div>
             <div>
               <span class="email__datetime">6:00PM</span>
@@ -75,7 +62,9 @@
           <div class="email__actions">
             <input id="email-3" type="checkbox" class="email__checkbox" />
             <span class="checkmark"></span>
-            <label for="email-3">DD</label>
+            <label for="email-3">
+              <span> JJ </span>
+            </label>
           </div>
           <a href="#" class="email__details">
             <h3>{ email.author }</h3>
@@ -83,15 +72,9 @@
           </a>
           <div class="email__priority">
             <div class="email__star">
-              <input
-                id="star-3"
-                type="checkbox"
-                class="star__checkbox"
-              />
+              <input id="star-3" type="checkbox" class="star__checkbox" />
               <span class="star"></span>
-              <label for="star-3">
-                Star
-              </label>
+              <label for="star-3"> Star </label>
             </div>
             <div>
               <span class="email___datetime">Sunday</span>
@@ -118,15 +101,9 @@
           </a>
           <div class="email__priority">
             <div class="email__star">
-              <input
-                id="star-4"
-                type="checkbox"
-                class="star__checkbox"
-              />
+              <input id="star-4" type="checkbox" class="star__checkbox" />
               <span class="star"></span>
-              <label for="star-4">
-                Star
-              </label>
+              <label for="star-4"> Star </label>
             </div>
             <div>
               <span class="email___datetime">Nov. 6</span>
