Change home__list <ul> to <table>

--- a/index.html
+++ b/index.html
@@ -31,21 +31,23 @@
         </div>
       </li>
     </ul>
-    <ul class="home__list">
-      <li class="email">
-        <div class="card email__unread">
-          <div class="email__actions">
+    <div class="home__list">
+      <table class="email">
+        <tr class="card email__unread">
+          <td class="email__actions">
             <input id="email-2" type="checkbox" class="email__checkbox" />
             <span class="checkmark"></span>
             <label for="email-2">
               <span> JJ </span>
             </label>
-          </div>
-          <a href="#" class="email__details">
-            <h3>{ email.author }</h3>
-            <p>{ email.msg }</p>
-          </a>
-          <div class="email__priority">
+          </td>
+          <td class="email__details">
+            <a href="#" class="email__details">
+              <h3>{ email.author }</h3>
+              <p>{ email.msg }</p>
+            </a>
+          </td>
+          <td class="email__priority">
             <div class="email__star">
               <input id="star-2" type="checkbox" class="star__checkbox" />
               <span class="star"></span>
@@ -54,64 +56,35 @@
             <div>
               <span class="email__datetime">6:00PM</span>
             </div>
-          </div>
-        </div>
-      </li>
-      <li class="email">
-        <div class="card">
-          <div class="email__actions">
-            <input id="email-3" type="checkbox" class="email__checkbox" />
+          </td>
+        </tr>
+        <tr class="card">
+          <td class="email__actions">
+            <input id="email-2" type="checkbox" class="email__checkbox" />
             <span class="checkmark"></span>
-            <label for="email-3">
+            <label for="email-2">
               <span> JJ </span>
             </label>
-          </div>
-          <a href="#" class="email__details">
-            <h3>{ email.author }</h3>
-            <p>{ email.msg }</p>
-          </a>
-          <div class="email__priority">
+          </td>
+          <td class="email__details">
+            <a href="#" class="email__details">
+              <h3>{ email.author }</h3>
+              <p>{ email.msg }</p>
+            </a>
+          </td>
+          <td class="email__priority">
             <div class="email__star">
-              <input id="star-3" type="checkbox" class="star__checkbox" />
+              <input id="star-2" type="checkbox" class="star__checkbox" />
               <span class="star"></span>
-              <label for="star-3"> Star </label>
+              <label for="star-2"> Star </label>
             </div>
             <div>
-              <span class="email___datetime">Sunday</span>
+              <span class="email__datetime">6:00PM</span>
             </div>
-          </div>
-        </div>
-      </li>
-      <li class="email">
-        <div class="card">
-          <div class="email__actions">
-            <input id="email-4" type="checkbox" class="email__checkbox" />
-            <span class="checkmark"></span>
-            <label for="email-4">
-              <img
-                width="28"
-                alt="Github Invertocat Logo"
-                src="https://upload.wikimedia.org/wikipedia/commons/c/c2/GitHub_Invertocat_Logo.svg"
-              />
-            </label>
-          </div>
-          <a href="#" class="email__details">
-            <h3>{ email.author }</h3>
-            <p>{ email.msg }</p>
-          </a>
-          <div class="email__priority">
-            <div class="email__star">
-              <input id="star-4" type="checkbox" class="star__checkbox" />
-              <span class="star"></span>
-              <label for="star-4"> Star </label>
-            </div>
-            <div>
-              <span class="email___datetime">Nov. 6</span>
-            </div>
-          </div>
-        </div>
-      </li>
-    </ul>
+          </td>
+        </tr>
+      </table>
+    </div>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
