Failed at table

--- a/index.html
+++ b/index.html
@@ -33,56 +33,59 @@
     </ul>
     <div class="home__list">
       <table class="email">
-        <tr class="card email__unread">
-          <td class="email__actions">
-            <input id="email-2" type="checkbox" class="email__checkbox" />
-            <span class="checkmark"></span>
-            <label for="email-2">
-              <span> JJ </span>
-            </label>
-          </td>
-          <td class="email__details">
-            <a href="#" class="email__details">
-              <h3>{ email.author }</h3>
-              <p>{ email.msg }</p>
-            </a>
-          </td>
-          <td class="email__priority">
-            <div class="email__star">
-              <input id="star-2" type="checkbox" class="star__checkbox" />
-              <span class="star"></span>
-              <label for="star-2"> Star </label>
-            </div>
-            <div>
-              <span class="email__datetime">6:00PM</span>
-            </div>
-          </td>
-        </tr>
-        <tr class="card">
-          <td class="email__actions">
-            <input id="email-2" type="checkbox" class="email__checkbox" />
-            <span class="checkmark"></span>
-            <label for="email-2">
-              <span> JJ </span>
-            </label>
-          </td>
-          <td class="email__details">
-            <a href="#" class="email__details">
-              <h3>{ email.author }</h3>
-              <p>{ email.msg }</p>
-            </a>
-          </td>
-          <td class="email__priority">
-            <div class="email__star">
-              <input id="star-2" type="checkbox" class="star__checkbox" />
-              <span class="star"></span>
-              <label for="star-2"> Star </label>
-            </div>
-            <div>
-              <span class="email__datetime">6:00PM</span>
-            </div>
-          </td>
-        </tr>
+        <thead>
+          <th>Inbox</th>
+        </thead>
+          <tr class="card email__unread">
+            <td class="email__actions">
+              <input id="email-2" type="checkbox" class="email__checkbox" />
+              <span class="checkmark"></span>
+              <label for="email-2">
+                <span> JJ </span>
+              </label>
+            </td>
+            <td class="email__details">
+              <a href="#" class="email__details">
+                <h3>{ email.author }</h3>
+                <p>{ email.msg }</p>
+              </a>
+            </td>
+            <td class="email__priority">
+              <div class="email__star">
+                <input id="star-2" type="checkbox" class="star__checkbox" />
+                <span class="star"></span>
+                <label for="star-2"> Star </label>
+              </div>
+              <div>
+                <span class="email__datetime">6:00PM</span>
+              </div>
+            </td>
+          </tr>
+          <tr class="card">
+            <td class="email__actions">
+              <input id="email-2" type="checkbox" class="email__checkbox" />
+              <span class="checkmark"></span>
+              <label for="email-2">
+                <span> JJ </span>
+              </label>
+            </td>
+            <td class="email__details">
+              <a href="#" class="email__details">
+                <h3>{ email.author }</h3>
+                <p>{ email.msg }</p>
+              </a>
+            </td>
+            <td class="email__priority">
+              <div class="email__star">
+                <input id="star-2" type="checkbox" class="star__checkbox" />
+                <span class="star"></span>
+                <label for="star-2"> Star </label>
+              </div>
+              <div>
+                <span class="email__datetime">6:00PM</span>
+              </div>
+            </td>
+          </tr>
       </table>
     </div>
     <script
