Removed unused CSS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>CSS Project</title>
   </head>
   <body>
-    <!-- <nav id="primary_nav">
+    <nav id="primary_nav">
       <button id="menu-btn">Open menu</button>
       <ul class="nav__links">
         <li class="card nav__link">
@@ -27,7 +27,7 @@
         </li>
       </ul>
       <div id="nav__scrim" class="nav__scrim" aria-hidden="true"></div>
-    </nav> -->
+    </nav>
     <header id="main-header">
       <h1>Inbox</h1>
       <form id="search" class="search-bar card">
