Add mobile menu icon to complete header w/ global icon mixin to make scss more DRY

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
     </nav>
     <div id="scrim" aria-hidden="true"></div>
     <header id="main-header">
-      <button id="menu-btn" class="desktop-hidden">Open menu</button>
+      <button id="menu-btn" class="desktop-hidden">
+        <span class="menu-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Open Menu</span>
+      </button>
       <h1>Inbox</h1>
       <form id="search" class="search-bar card">
         <label for="search-bar" class="visually-hidden">Search</label>
