--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
   <body>
     <nav id="primary-nav">
       <ul class="nav__links">
-        <li class="card nav__link">
+        <li class="nav__link">
           <a href="#">
             <span>Inbox Icon</span>
             Inbox
           </a>
         </li>
-        <li class="card nav__link">
+        <li class="nav__link">
           <a href="#">
             <span>Drafts Icon</span>
             Drafts
           </a>
         </li>
-        <li class="card nav__link">
+        <li class="nav__link">
           <a href="#">
             <span>Starred Icon</span>
             Starred
           </a>
         </li>
-        <li class="card nav__link">
+        <li class="nav__link">
           <a href="#">
             <span>Trash Icon</span>
             Trash
