Organized style.scss standards and styling by using responsive() from globals.scss and removing unused / duplicate code.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </header>
         <ul class="home__list">
           <li class="email" id="email2">
-            <div class="card email__unread">
+            <div class="card">
               <div class="email__actions" aria-describedby="author2">
                 <span class="email__initials" aria-hidden="true"> PP </span>
                 <input
