Add Compose button to navigation

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <nav id="primary-nav">
       <ul class="nav__links">
+        <li class="compose__link">
+          <button id="compose-btn">Compose</button>
+        </li>
         <li class="nav__link">
           <a href="#">
             <span>Inbox Icon</span>
