--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
   </head>
   <body>
     <nav id="primary-nav">
-      <h1 id="greeting">Hello, Kariyma</h1>
-      <ul class="nav__links">
-        <li class="compose__link">
+      <div id="logo">
+        <div class="compose__link">
           <button id="compose-btn">Compose</button>
-        </li>
+        </div>
+      </div>
+      <ul class="nav__links">
         <li class="nav__link">
           <a href="#">
             <span class="inbox-icon">Inbox Icon</span>
-            Inbox
+            Inbox <span id="unread-count">unread</span>
           </a>
         </li>
         <li class="nav__link">
@@ -47,8 +48,10 @@
         <span class="menu-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Open Menu</span>
       </button>
-      <!-- <h1 id="greeting">Hello, Kariyma</h1> -->
-      <h2>Inbox <span id="unread-count">unread</span></h2>
+      <div id="greeting">
+        <h1></h1>
+        <span id="clock"><time id="current-date" class="mobile-hidden"></time>
+      </div>
       <form id="search" class="search-bar card">
         <label for="search-bar" class="visually-hidden">Search</label>
         <input
@@ -64,7 +67,6 @@
       </form>
     </header>
     <main id="email-list" data-theme='long'>
-      <span id="clock"><time id="current-date" class="mobile-hidden"></time></span>
       <section>
         <header>
           <h3>1 pinned message</h3>
@@ -418,7 +420,7 @@
           },
           realtimeClock: () => {
             const now = new Date();
-            elements["current-date"].innerText = `It's ${now.toLocaleString(
+            elements["current-date"].innerText = `${now.toLocaleString(
               "en-US",
               currentDate.date_options
             )} ${now.toLocaleString("en-US", currentDate.time_options)}`;
