Finished email template for iframe

--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
               >
             </div>
           </div>
+          <iframe src="email-template.html" title="description"></iframe>
           <div id="sender__actions">
             <span>Move to...</span>
             <div>
@@ -352,7 +353,6 @@
               </div>
             </div>
           </div>
-          <!-- <iframe src="TBD" title="description"></iframe> -->
         </div>
       </aside>
     </main>
