--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
       <aside id="email__content">
         <div id="email__content-view" class="email__content">
           <button id="email_exit-btn">Close email</button>
-          <div class="email__subject">
+          <div id="email__subject">
             <h1>Click me!</h1>
           </div>
           <div id="email__sender">
