Finished reply section of email content view

--- a/email-template.html
+++ b/email-template.html
@@ -9,6 +9,8 @@
         :root {
             background-color: antiquewhite;
             padding-bottom: 68px;
+            max-width: 525px;
+            margin: 0 auto;
         }
         td.header {
             font-family: "Instrument Serif", serif;
@@ -32,7 +34,7 @@
                     <!-- Email content goes here -->
                     <tr>
                         <td class="header" style="color: black; font-size: 64px; font-style: italic;">
-                        The CONCORDE
+                        EXAMPLE
                         </td>
                         <td>
                             NEWSLETTER
