FINISHED finishing touches! Turn it in!

--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
                 </a>
                 <h3>Peter Potamus</h3>
                 <p>
-                  <span>Re: Did you get that thing I sent you?</span> - That thing I sent you
-                  was really important
+                  <span>Did you get that thing I sent you?</span> - Did you get that thing I sent you? - Potamus
                 </p>
                 <div class="email__priority">
                   <div>
@@ -526,14 +525,12 @@
             <h1>Click me!</h1>
           </div>
           <div id="email__sender">
-            <div>
-              <span
-                class="email__initials icon-btn"
-                aria-hidden="true"
-              >
-                KM
-              </span>
-            </div>
+              <span class="email__initials icon-btn" aria-hidden="true"> 
+                <img
+                alt="Kariyma Murphy profile photo"
+                src="https://mir-s3-cdn-cf.behance.net/user/276/5e23674548351.5eae0a14a6ea0.jpg"
+              /> 
+                 </span>
             <div id="sender__info" class="home__list">
               <span>Kariyma Murphy &lt;kariymam@email.me&gt;</span>
               <span
